Prompt users Mms can't receive msgs if storage is full
Telephony framework will report operators Sms Memory is full if
Device storage running out. Then operators won't send the target
any messages until storage is available next time.

Refer to
frameworks/opt/telephony/src/java/com/android/internal/telephony/SmsStorageMonitor.java

Change-Id: I7712355eac17c6adf3ab51ddb0907d52cb7759ee
Signed-off-by: Roger Chen <cxr514033970@gmail.com>

--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -428,4 +428,6 @@
     <string name="pref_summary_mms_user_agent">发送信息时将手机伪装成不同的设备</string>
     <string name="pref_mms_user_agent_custom_set">自定义用户代理设置为：\n</string>
 
+    <string name="storage_warning_title">你的手机内存已满</string>
+    <string name="storage_warning_content">你将不会接受新的短/彩信</string>
 </resources>
